--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -16,7 +16,9 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - name: Create local changes
-      run: npm run generate-sitemap --if-present
+      run:
+        npm ci 
+        npm run generate-sitemap --if-present
     - name: Commit files
       run: 
         git config --local user.email "mastaleru.rafael@gmail.com"
