--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -29,7 +29,7 @@ jobs:
       run: |
         remote_repo="https://${GITHUB_ACTOR}:${INPUT_GITHUB_TOKEN}@github.com/${REPOSITORY}.git"
         echo $remote_repo
-        git push "${remote_repo}" HEAD:${INPUT_BRANCH} --follow-tags $_FORCE_OPTION;
+        git push "${remote_repo}" HEAD:sitemap-test --follow-tags;
       env:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         branch: 'sitemap-test' 
