--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -26,11 +26,11 @@ jobs:
         git add sitemap.xml
         git commit -m "GithubRunner:sitemap.xml was updated"
     - name: Push changes
-      run: |
-        remote_repo="https://${GITHUB_ACTOR}:${INPUT_GITHUB_TOKEN}@github.com/${REPOSITORY}.git"
-        echo $remote_repo
-        git push "${remote_repo}" HEAD:sitemap-test --follow-tags;
       env:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        branch: 'sitemap-test' 
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        remote_repo="https://${GITHUB_ACTOR}:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git"
+        echo $remote_repo
+        git push "${remote_repo}" HEAD:${GITHUB_REF} --follow-tags;
+       
   
