--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -24,13 +24,12 @@ jobs:
         git config --local user.email "mastaleru.rafael@gmail.com"
         git config --local user.name "Mastaleru Rafael"
         git add sitemap.xml
-        git commit -m "GithubRunner:sitemap.xml was updated"
+        git commit -m "[GitHubBotRunner] Sitemap.xml was updated."
     - name: Push changes
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         remote_repo="https://${GITHUB_ACTOR}:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git"
-        echo $remote_repo
         git push "${remote_repo}" HEAD:${GITHUB_REF} --follow-tags;
        
   
