--- a/app-config.json
+++ b/app-config.json
@@ -49,7 +49,7 @@
       },
       {
         "name": "EDFS",
-        "path": "/EDFS",
+        "path": "/EDDFS",
         "icon": "fa-cog",
         "children": [
           {
