--- a/.github/workflows/gh-pages-build.yml
+++ b/.github/workflows/gh-pages-build.yml
@@ -7,11 +7,12 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v1
-
+      env:
+        CI: true
     - name: Build and Deploy
       uses: JamesIves/github-pages-deploy-action@releases/v3
       with:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        ACCESS_TOKEN : ${{ secrets.ACCESS_TOKEN  }}
         BASE_BRANCH: master # The branch the action should deploy from.
         BRANCH: gh-pages # The branch the action should deploy to.
         FOLDER: . # The folder the action should deploy.
