--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "scripts": {
     "generate-sitemap": "node -r esm ./bin/generate-sitemap.js",
     "web-server": "ws --spa ./index.html",
-    "update-cardinal": "node ./bin/update-cardinal.js"
+    "update-cardinal": "cardinal-updater update -v 0.0.1"
   },
   "devDependencies": {
     "local-web-server": "^3.0.7",
     "esm": "^3.2.25"
+  },
+  "dependencies": {
+    "cardinal-updater": "PrivateSky/cardinal-updater"
   },
   "license": "MIT"
 }
