--- a/app-config.json
+++ b/app-config.json
@@ -226,7 +226,7 @@
             "name": "Attachments List"
           },
           {
-            "name": "File Chooser"
+            "name": "Files Chooser"
           },
           {
             "name": "Modal"
