--- a/app-config.json
+++ b/app-config.json
@@ -28,6 +28,9 @@
         "icon": "fa-cog",
         "children": [
           {
+            "name": "Intro"
+          },
+          {
             "name": "Main Innovations"
           },
           {
@@ -147,16 +150,13 @@
         "icon": "fa-cog",
         "children": [
           {
-            "name": "How to write pages"
+            "name": "About"
           },
           {
-            "name": "How to create a new site with this approach"
+            "name": "How to create a new site with Cardinal"
           },
           {
-            "name": "Contributors"
-          },
-          {
-            "name": "Copyright"
+            "name": "How to write documentation pages"
           }
         ]
       },
