--- a/app-config.json
+++ b/app-config.json
@@ -56,6 +56,9 @@
             "name": "Swarms Explained"
           },
           {
+            "name": "Interactions"
+          },
+          {
             "name": "Installation"
           },
           {
