--- a/app-config.json
+++ b/app-config.json
@@ -12,6 +12,7 @@
       "type": "route",
       "component": "psk-page-loader",
       "exact": true,
+      "indexed": true,
       "pagePrefix": "?",
       "historyType": "query"
     },
@@ -296,6 +297,9 @@
         "name": "Glossary",
         "path": "/glossary",
         "pageSrc": "About/glossary.html"
+      },{
+        "name": "404",
+        "indexed": false
       }
     ]
   }
