--- a/app-config.json
+++ b/app-config.json
@@ -1,6 +1,5 @@
 {
-  "baseUrl": "http://127.0.0.1:8000",
-  "basePagesUrl": "http://127.0.0.1:8000/pages/",
+  "basePagesUrl": "/pages/",
   "profile": {
     "username": "PrivateSky",
     "email": "privatesky@axiologic.net",
