extracting sitemap basepath from command line

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.2",
   "description": "PrivateSky Development Hub",
   "scripts": {
-    "generate-sitemap": "node -r esm ./bin/generate-sitemap.js",
+    "generate-sitemap": "node -r esm ./bin/generate-sitemap.js https://privatesky.xyz",
     "web-server": "ws --spa ./index.html",
     "update-cardinal": "cardinal-updater update -v 0.0.1"
   },
