--- a/app-config.json
+++ b/app-config.json
@@ -130,6 +130,12 @@
           },
           {
             "name": "Advanced"
+          },
+          {
+            "name": "Swarm Engine"
+          },
+          {
+            "name": "Annotation Engine"
           }
         ]
       },
