Added page for Syndicate module

--- a/app-config.json
+++ b/app-config.json
@@ -136,6 +136,9 @@
             "name": "Swarm Engine"
           },
           {
+            "name": "Syndicate"
+          },
+          {
             "name": "Annotation Engine"
           }
         ]
