--- a/app-config.json
+++ b/app-config.json
@@ -103,47 +103,6 @@
         ]
       },
       {
-        "name": "Development",
-        "path": "/Development",
-        "icon": "fa-cog",
-        "children": [
-          {
-            "name": "Coding style"
-          },
-          {
-            "name": "Unit testing map"
-          },
-          {
-            "name": "Node Modules"
-          },
-          {
-            "name": "Workers and Isolates"
-          },
-          {
-            "name": "Encrypted Choreographies"
-          },
-          {
-            "name": "Development guide"
-          },
-          {
-            "name": "Communication"
-          },
-          {
-            "name": "Advanced",
-            "indexed": "false"
-          },
-          {
-            "name": "Swarm Engine"
-          },
-          {
-            "name": "Syndicate"
-          },
-          {
-            "name": "Annotation Engine"
-          }
-        ]
-      },
-      {
         "name": "EDFS",
         "path": "/EDFS",
         "icon": "fa-cog",
@@ -162,34 +121,6 @@
           },
           {
             "name": "Secret Smart Contracts"
-          }
-        ]
-      },
-      {
-        "name": "Tools",
-        "path": "/Tools",
-        "icon": "fa-cog",
-        "children": [
-          {
-            "name": "Tool List"
-          },
-          {
-            "name": "bar"
-          },
-          {
-            "name": "PSKDomain"
-          },
-          {
-            "name": "PSKWallet"
-          },
-          {
-            "name": "CSBWizard"
-          },
-          {
-            "name": "PSKMonitor"
-          },
-          {
-            "name": "Governance"
           }
         ]
       },
@@ -316,6 +247,79 @@
           },
           {
             "name": "App Menu"
+          }
+        ]
+      },
+      {
+        "name": "Tools",
+        "path": "/Tools",
+        "icon": "fa-cog",
+        "children": [
+          {
+            "name": "Tool List"
+          },
+          {
+            "name": "bar"
+          },
+          {
+            "name": "PSKDomain"
+          },
+          {
+            "name": "PSKWallet"
+          },
+          {
+            "name": "CSBWizard"
+          },
+          {
+            "name": "PSKMonitor"
+          },
+          {
+            "name": "Governance"
+          }
+        ]
+      },
+      {
+        "name": "Development",
+        "path": "/Development",
+        "icon": "fa-cog",
+        "children": [
+          {
+            "name": "Coding style",
+            "indexed": "false"
+          },
+          {
+            "name": "Unit testing map",
+            "indexed": "false"
+          },
+          {
+            "name": "Node Modules"
+          },
+          {
+            "name": "Workers and Isolates"
+          },
+          {
+            "name": "Encrypted Choreographies"
+          },
+          {
+            "name": "Development guide",
+            "indexed": "false"
+          },
+          {
+            "name": "Communication",
+            "indexed": "false"
+          },
+          {
+            "name": "Advanced",
+            "indexed": "false"
+          },
+          {
+            "name": "Swarm Engine"
+          },
+          {
+            "name": "Syndicate"
+          },
+          {
+            "name": "Annotation Engine"
           }
         ]
       },
