--- a/app-config.json
+++ b/app-config.json
@@ -64,6 +64,9 @@
                         "name": "Installation"
                     },
                     {
+                        "name": "Dependencies"
+                    },
+                    {
                         "name": "Code Examples"
                     }
                 ]
